style remove buttons

--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -5,12 +5,25 @@
 .tracker-line{
     color: red;
     display: flex;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
 }
 
 .item{
-    margin: 10px;
+    margin: 20px
 }
 
-.expiratin{
-    margin: 10px;
+.expiration{
+    margin: 20px;
+}
+
+.remove-button{
+    /* padding: 5px; */
+    height: 30px;
+    margin: auto 0;
+}
+
+#tracker-container{
+    text-align: center;
 }
