--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -26,7 +26,7 @@
 
 .remove-button{
     height: 30px;
-    margin: auto 0;
+    margin: auto 10px;
     background-color: white;
     border: 1px solid black;
 }
