--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -50,3 +50,19 @@
 #tracker-container{
     text-align: center;
 }
+
+.tracker-add{
+    border: 1px solid black;
+    margin: 10px;
+}
+
+#add-button{
+    border: 1px solid black;
+    background-color: white;
+    margin: 10px;
+    width: 60px;
+}
+
+#add-button:hover{
+    background-color: skyblue;
+}
