--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -1,9 +1,10 @@
 .header{
     font-size: 40px;
+    color: white
 }
 
 .tracker-line{
-    color: black;
+    color: white;
     display: flex;
     margin: 0 auto;
     width: 100%;
@@ -25,15 +26,15 @@
 }
 
 .still-good{
-    color: green
+    color: rgb(91, 253, 91)
 }
 
 .almost-expired{
-    color: orange
+    color: rgb(255, 166, 0)
 }
 
 .expired{
-    color: red
+    color: rgb(255, 64, 64)
 }
 
 .remove-button{
@@ -49,6 +50,13 @@
 
 #tracker-container{
     text-align: center;
+    background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80");
+    background-size: cover;
+}
+
+#tracker-background-layer{
+    background-color: rgba(0, 0, 0, 0.466);
+    margin: 0 auto
 }
 
 .tracker-add{
