--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -41,7 +41,7 @@
     height: 30px;
     margin: auto 10px;
     background-color: white;
-    border: 1px solid black;
+    border: none;
 }
 
 .remove-button:hover{
@@ -60,12 +60,12 @@
 }
 
 .tracker-add{
-    border: 1px solid black;
+    border: none;
     margin: 10px;
 }
 
 #add-button{
-    border: 1px solid black;
+    border: none;
     background-color: white;
     margin: 10px;
     width: 60px;
