--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -52,6 +52,7 @@
     text-align: center;
     background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80");
     background-size: cover;
+    height: 100vh;
 }
 
 #tracker-background-layer{
@@ -73,4 +74,14 @@
 
 #add-button:hover{
     background-color: skyblue;
+}
+
+#not-logged{
+    display: flex;
+    height: 100%;
+}
+
+#not-logged-text{
+    font-size: 30px;
+    margin: auto;
 }
