--- a/src/Tracker/tracker.css
+++ b/src/Tracker/tracker.css
@@ -50,9 +50,7 @@
 
 #tracker-container{
     text-align: center;
-    background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80");
-    background-size: cover;
-    height: 100vh;
+    background-color: rgb(0, 0, 0);
 }
 
 #tracker-background-layer{
@@ -78,7 +76,10 @@
 
 #not-logged{
     display: flex;
-    height: 100%;
+    height: 100vh;
+    text-align: center;
+    background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80");
+    background-size: cover;
 }
 
 #not-logged-text{
